tests/models/enum/named/f32/fail/min_items.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(min_items = 2)]
        value: f32
    },
}
fn main() {}
